--- a/badIceCream/.classpath
+++ b/badIceCream/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src/dominio"/>
-	<classpathentry kind="src" path="src/presentacion"/>
-	<classpathentry kind="src" path="src/pruebas"/>
-	<classpathentry kind="src" path="src/src"/>
-	<classpathentry kind="output" path="bin/bin"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
